--- a/src/main/resources/properties/stg.yaml
+++ b/src/main/resources/properties/stg.yaml
@@ -1,13 +1,13 @@
 #keystore
-projectName-keystore:
-  path: "keystore-example.jks"
-
+mla-keystore:
+  path: "keystore.jks"
+  
 # API Listener
 api:
   id: "000000000"
-  
-# External Endpoint
-external-system:
-  host: "localhost"
-  port: "8082"
-  path: "/api/*"
+  host: "0.0.0.0"
+  port: ${https.port}
+  version: "v1"
+  path: "/*"
+
+
