--- a/pom.xml
+++ b/pom.xml
@@ -1,24 +1,20 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
 	<modelVersion>4.0.0</modelVersion>
+	
 	<groupId>4e0798ad-d10a-4e83-989b-e88b85f75b9f</groupId>
 	<artifactId>jenkins-integration-mulesoft-app</artifactId>
 	<version>1.0.0</version>
 	<packaging>mule-application</packaging>
-	<name>jenkins-integration-mulesoft</name>
-	<description>A Merkle Mulesoft application template following the namings and conventions frameworks with implementing a global error handler framework</description>
 	
+	<name>jenkins-integration-mulesoft</name>
 	<properties>
 		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
 		<project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
 		<app.runtime>4.4.0-20220221</app.runtime>
-		<mule.maven.plugin.version>3.8.1</mule.maven.plugin.version>
-		<tags>mulesoft,framework,template</tags>
-		<categories>[]</categories>
-		<fields>[]</fields>
-		<jdk.version>11</jdk.version>
+		<mule.maven.plugin.version>3.8.2</mule.maven.plugin.version>
+
 	</properties>
-	
 	<build>
 		<plugins>
 			<plugin>
@@ -79,33 +75,33 @@
 					<classifier>mule-application</classifier>
 				</configuration>
 			</plugin>
-		<!-- Maven Release Plugin -->
+			<!-- Maven Release Plugin -->
 			<plugin>
-			  <groupId>org.apache.maven.plugins</groupId>
-			  <artifactId>maven-release-plugin</artifactId>
-			  <version>2.5.3</version>
-			  <configuration>
-				<!-- Optional configurations -->
-				<tagNameFormat>@{project.version}</tagNameFormat>
-				<releaseVersion>1.0.0</releaseVersion>
-				<developmentVersion>1.0.1-SNAPSHOT</developmentVersion>
-				<autoVersionSubmodules>true</autoVersionSubmodules>
-			  </configuration>
-			</plugin>
-		<!-- Unit Testing Plugin -->
+				<groupId>org.apache.maven.plugins</groupId>
+				<artifactId>maven-release-plugin</artifactId>
+				<version>2.5.3</version>
+				<configuration>
+
+					<!--<tagNameFormat>@{project.version}</tagNameFormat>
+					<releaseVersion>1.0.0</releaseVersion>
+					<developmentVersion>1.0.1-SNAPSHOT</developmentVersion>
+					<autoVersionSubmodules>true</autoVersionSubmodules> -->
+				</configuration>
+			</plugin> 
+			<!-- Unit Testing Plugin 
 			<plugin>
 				<groupId>org.apache.maven.plugins</groupId>
 				<artifactId>maven-surefire-plugin</artifactId>
 				<version>2.22.2</version>
 				<configuration>
-					<!-- Optional configurations -->
+
 					<includes>
 						<include>**/*Test.java</include>
 					</includes>
 				</configuration>
-			</plugin>
-		<!-- Integration Testing Plugin -->
-		<!--	<plugin>
+			</plugin> -->
+			<!-- Integration Testing Plugin -->
+			<!--	<plugin>
 			  <groupId>org.apache.maven.plugins</groupId>
 			  <artifactId>maven-failsafe-plugin</artifactId>
 			  <version>2.22.2</version>
@@ -120,7 +116,6 @@
 			</plugin> -->
 		</plugins>
 	</build>
-	
 	<dependencies>
 		<dependency>
 			<groupId>mysql</groupId>
@@ -146,12 +141,6 @@
 			<classifier>mule-plugin</classifier>
 		</dependency>
 		<dependency>
-			<groupId>1aeefcb6-3f2e-4e2c-802c-811a28e32b23</groupId>
-			<artifactId>global-error-handler</artifactId>
-			<version>1.1.2</version>
-			<classifier>mule-plugin</classifier>
-		</dependency>
-		<dependency>
 			<groupId>org.mule.modules</groupId>
 			<artifactId>mule-validation-module</artifactId>
 			<version>2.0.5</version>
@@ -169,8 +158,13 @@
 			<version>1.8.0</version>
 			<classifier>mule-plugin</classifier>
 		</dependency>
+		<dependency>
+			<groupId>4e0798ad-d10a-4e83-989b-e88b85f75b9f</groupId>
+			<artifactId>global-error-handler</artifactId>
+			<version>1.0.0</version>
+			<classifier>mule-plugin</classifier>
+		</dependency>
 	</dependencies>
-	
 	<repositories>
 		<repository>
 			<id>anypoint-exchange-v3</id>
@@ -184,14 +178,7 @@
 			<url>https://repository.mulesoft.org/releases/</url>
 			<layout>default</layout>
 		</repository>
-		<repository>
-			<id>anypoint-exchange-framework</id>
-			<name>Other Organization Repository</name>
-			<url>https://maven.anypoint.mulesoft.com/api/v3/organizations/1aeefcb6-3f2e-4e2c-802c-811a28e32b23/maven</url>
-			<layout>default</layout>
-		</repository>
 	</repositories>
-	
 	<pluginRepositories>
 		<pluginRepository>
 			<id>mulesoft-releases</id>
@@ -211,5 +198,4 @@
 			<layout>default</layout>
 		</repository>
 	</distributionManagement>
-	
 </project>
