--- a/src/main/resources/secure-properties/secure-dev.yaml
+++ b/src/main/resources/secure-properties/secure-dev.yaml
@@ -1,4 +1,4 @@
 # Encrypted properties that are sensitive (passwords,token,username...)
-mla-keystore:
+keystore:
   alias: "![AAWPil6s9/aJjaTEBihtTA==]"
   keystore-password: "![uy0JUvIuAOAsvYQbZNZuxw==]"
