--- a/src/main/resources/secure-properties/secure-prd.yaml
+++ b/src/main/resources/secure-properties/secure-prd.yaml
@@ -1,4 +1,4 @@
 # Encrypted properties that are sensitive (passwords,token,username...)
-mla-keystore:
+keystore:
   alias: "![Z5lVH3bTxa8NhMczzd2iiw==]"
   keystore-password: "![isVrDNdfq8vJ92fORmux5A==]"
