--- a/pom.xml
+++ b/pom.xml
@@ -2,85 +2,42 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
 	<modelVersion>4.0.0</modelVersion>
 	
+	<parent>
+		<groupId>4e0798ad-d10a-4e83-989b-e88b85f75b9f</groupId>
+		<artifactId>parent-pom</artifactId>
+		<version>1.0.0</version>
+	</parent>
+	
 	<groupId>4e0798ad-d10a-4e83-989b-e88b85f75b9f</groupId>
 	<artifactId>jenkins-integration-mulesoft-app</artifactId>
 	<version>1.0.5</version>
 	<packaging>mule-application</packaging>
 	
 	<name>jenkins-integration-mulesoft</name>
+	
 	<properties>
 		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
 		<project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
 		<app.runtime>4.4.0-20220221</app.runtime>
-		<mule.maven.plugin.version>3.8.2</mule.maven.plugin.version>
-
 	</properties>
+	
 	<build>
 		<plugins>
 			<plugin>
 				<groupId>org.apache.maven.plugins</groupId>
 				<artifactId>maven-clean-plugin</artifactId>
-				<version>3.2.0</version>
 			</plugin>
 			<plugin>
 				<groupId>org.mule.tools.maven</groupId>
 				<artifactId>mule-maven-plugin</artifactId>
-				<version>${mule.maven.plugin.version}</version>
 				<extensions>true</extensions>
-				<configuration>
-					<cloudhub2Deployment>
-						<uri>https://anypoint.mulesoft.com</uri>
-						<provider>MC</provider>
-						<environment>Development</environment>
-						<target>private-alias</target>
-						<muleVersion>4.4.0</muleVersion>
-						<server>anypoint-exchange-v3</server>
-						<applicationName>jenkins-integration-mulesoft</applicationName>
-						<replicas>1</replicas>
-						<vCores>0.1</vCores>
-						<businessGroupId>4e0798ad-d10a-4e83-989b-e88b85f75b9f</businessGroupId>
-						<integrations>
-							<services>
-								<objectStoreV2>
-									<enabled>true</enabled>
-								</objectStoreV2>
-							</services>
-						</integrations>
-						<secureProperties>
-							<secret-key>m!zP6@u*od%n58+g</secret-key>
-							<anypoint.platform.client_id>985108db05fd4dd3bb98e9525a764125</anypoint.platform.client_id>
-							<anypoint.platform.client_secret>5cF54FE0c9914f9b920c4A9c552E9c56</anypoint.platform.client_secret>
-						</secureProperties>
-						<properties>
-							<env>dev</env>
-							<!-- <api.id>${api-id}</api.id> -->
-							<anypoint.platform.base_uri>https://anypoint.mulesoft.com</anypoint.platform.base_uri>
-							<anypoint.platform.analytics_base_uri>https://analytics-ingest.anypoint.mulesoft.com</anypoint.platform.analytics_base_uri>
-						</properties>
-						<scopeLoggingConfigurations>
-							<scopeLoggingConfiguration>
-								<scope>org.mule.runtime.core.internal.processor.LoggerMessageProcessor</scope>
-								<logLevel>DEBUG</logLevel>
-							</scopeLoggingConfiguration>
-						</scopeLoggingConfigurations>
-						<deploymentSettings>
-							<http>
-								<inbound>
-									<forwardSslSession>true</forwardSslSession>
-									<lastMileSecurity>true</lastMileSecurity>
-								</inbound>
-							</http>
-							<generateDefaultPublicUrl>true</generateDefaultPublicUrl>
-						</deploymentSettings>
-					</cloudhub2Deployment>
-					<classifier>mule-application</classifier>
-				</configuration>
+				<!-- <version>3.5.4</version> -->
+				<!-- <version>3.5.4</version> -->
 			</plugin>
 			<!-- Maven Release Plugin -->
 			<plugin>
 				<groupId>org.apache.maven.plugins</groupId>
 				<artifactId>maven-release-plugin</artifactId>
-				<version>2.5.3</version>
 				<configuration>
 
 					<!--<tagNameFormat>@{project.version}</tagNameFormat>
@@ -117,7 +74,8 @@
 			</plugin> -->
 		</plugins>
 	</build>
-	<dependencies>
+	
+	<!--<dependencies>
 		<dependency>
 			<groupId>mysql</groupId>
 			<artifactId>mysql-connector-java</artifactId>
@@ -165,8 +123,9 @@
 			<version>1.0.0</version>
 			<classifier>mule-plugin</classifier>
 		</dependency>
-	</dependencies>
-	<repositories>
+	</dependencies> -->
+	
+	<!-- <repositories>
 		<repository>
 			<id>anypoint-exchange-v3</id>
 			<name>Anypoint Exchange</name>
@@ -198,5 +157,6 @@
 			<url>https://maven.anypoint.mulesoft.com/api/v3/organizations/4e0798ad-d10a-4e83-989b-e88b85f75b9f/maven</url>
 			<layout>default</layout>
 		</repository>
-	</distributionManagement>
+	</distributionManagement> -->
+	
 </project>
